syntax = "proto3";

package protocol;

import "proto/common.proto";
import "proto/status.proto";

option go_package = "protocol;protocol";

message RankListReq
{
    int64 page_index = 1;
    int64 page_num = 2;
}

message RankListResp
{
    Status status = 1;
    repeated RankItem rank_items = 2;
    int64 page_index = 3;
    int64 page_num = 4;
    int64 total = 5;
    int64 pos = 6;
}